updated form to bootstrap and uninstalled react-bootstrap dependencies

--- a/src/Components/contactUs/contactUs.scss
+++ b/src/Components/contactUs/contactUs.scss
@@ -1,7 +1,11 @@
-.notecard {
+h1 {
+  text-align: center;
+}
+
+#contact-form {
   padding: 50px
 }
 
-.cardInputs {
+.form-group {
   margin-bottom: 15px;
 }
