edited routes and updated css

--- a/src/pages/public/Services/Services.css
+++ b/src/pages/public/Services/Services.css
@@ -1,9 +1,15 @@
 .Services {
-    margin-top: 50px;
-    margin-left: 4px
+  margin-top: 50px;
+  margin-left: 4px;
 }
 
 .cards {
-    margin-left: 15px;
-    margin-right:15px
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+p,
+h1,
+h5 {
+  color: black;
 }
