--- a/src/pages/public/Services/SampleService.css
+++ b/src/pages/public/Services/SampleService.css
@@ -1,18 +1,24 @@
 .list {
-    margin-top: 75px;
+  margin-top: 75px;
 }
 
 .SampleService {
-    margin-top: 50px;
-    margin-left: 4px;
-    margin-right: 0
+  margin-top: 50px;
+  margin-left: 4px;
+  margin-right: 0;
 }
 
 .cards {
-    margin-left: 15px;
-    margin-right:15px
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .Image {
-    margin-right: 0;
+  margin-right: 0;
+}
+
+p,
+h1,
+h5 {
+  color: black;
 }
