--- a/src/components/public/footer/footer.scss
+++ b/src/components/public/footer/footer.scss
@@ -3,9 +3,11 @@ $left: left;
 .mainWrapper {
   color: black;
   padding-top: 3em;
-  position: relative;
+  position: absolute;
   bottom: 0;
+  left: 0;
   width: 100%;
+  margin-top: 50px;
 }
 
 ul {
