--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,22 @@
 html{
-  height:100%;
+  /* min-height:100%; */
+  /* height:100%; */
   margin: 0;
   padding: 0;
+  /* position:relative; */
 }
 
 body {
-  margin: 0;
+  /* margin-bottom:100px !important; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
   padding: 0;
+  /* height: 100%; */
+  position:relative;
+  min-height: 88vh;
 }
 
 code {
