--- a/src/pages/public/Leadership/style.scss
+++ b/src/pages/public/Leadership/style.scss
@@ -22,11 +22,11 @@
     max-width: 100% !important
   }
 
-  .card{
+  .leadershipCard{
     width:100% !important;
   }
 
-  .card-body{
+  .leadershipCardBody{
     padding-left:auto;
     padding-right: auto;
   }
