--- a/src/pages/admin/Login/Login.scss
+++ b/src/pages/admin/Login/Login.scss
@@ -80,7 +80,7 @@ input::placeholder {
   color: #bbb;
 }
 
-button {
+.loginSubmitBtn {
   min-width: 100%;
   cursor: pointer;
   margin-right: 0.25em;
@@ -91,7 +91,7 @@ button {
   background-color: #22223b;
   color: #fefefe;
 }
-button:hover {
+.loginSubmitBtn:hover {
   background-color: #4a4e69;
   color: #fefefe;
 }
