--- a/src/pages/public/Services/style.css
+++ b/src/pages/public/Services/style.css
@@ -3,7 +3,7 @@
   margin-left: 4px;
 }
 
-.cards {
+.servicesCards {
   margin-left: 15px;
   margin-right: 15px;
 }
@@ -14,7 +14,19 @@ h5 {
   color: black;
 }
 
-.jumbotron{
+.servicesJumbotron{
   padding: 0px !important;
   text-align: center;
+}
+
+@media screen and (max-width: 532px) {
+
+  .servicesCards{
+    display: block;
+  }
+
+  .servicesCard{
+    width: 100%;
+    margin-top:5%;
+  }
 }
