--- a/src/components/public/footer/footer.scss
+++ b/src/components/public/footer/footer.scss
@@ -11,7 +11,7 @@ $left: left;
   // margin-top: auto;
   // // background-color: red;
   // padding-top: 0 !important;
-
+  font-size: 90%;
   position: absolute; 
   bottom: 0; 
   height:50px; 
@@ -19,13 +19,13 @@ $left: left;
 
 }
 
-ul {
-  list-style: none;
-}
+// ul {
+//   list-style: none;
+// }
 
-.navLinks {
-  text-align: right;
-}
+// .navLinks {
+//   text-align: right;
+// }
 .copyright {
   text-align: $left;
   margin-top: 20px;
@@ -58,5 +58,65 @@ ul {
 .fa-facebook {
   background: #3B5998;
   color: white;
-  width: 40px;
+  width: 8%;
+}
+
+@media screen and (max-width: 1199px){
+  .fa-facebook{
+    width: 9%;
+  }
+}
+
+@media screen and (max-width: 991px){
+  .fa-facebook{
+    width: 12%;
+  }
+}
+
+@media screen and (max-width: 767px){
+  .fa-facebook{
+    width: 17%;
+  }
+}
+
+@media screen and (max-width: 502px){
+  .fa{
+    font-size:10px;
+    padding: 6px;
+
+  }
+
+  .fa-facebook{
+    width: 10%;
+  }
+
+  .copyright {
+    margin-top: 8px;
+  }
+
+  @media screen and (max-width: 411px){
+    .fa-facebook{
+      width: 11%;
+    }
+  }
+
+  @media screen and (max-width: 383px){
+    .fa-facebook{
+      width: 9%;
+    }
+  }
+
+  @media screen and (max-width: 375px){
+    .fa-facebook{
+      width: 13%;
+    }
+  }
+
+  @media screen and (max-width: 360px){
+    .mainWrapper{
+      font-size: 50%;
+    }
+  }
+
+  
 }
