--- a/src/components/admin/NewBlogPost/newBlogPost.scss
+++ b/src/components/admin/NewBlogPost/newBlogPost.scss
@@ -1,3 +1,12 @@
 h2{
     color: black
 }
+
+.button-post{
+    color: white;
+    font-size: 1.2em;
+    margin: 0 10% 5px 10%;
+    width:10%;
+    text-align: center;
+    box-sizing: border-box;
+}
