--- a/src/pages/public/Leadership/style.scss
+++ b/src/pages/public/Leadership/style.scss
@@ -20,8 +20,7 @@
 }
 
 .photo{
-  width: 450px;
-  height: 350px;
+  width: 80%;
 }
 
 .notable-wins{
@@ -38,6 +37,12 @@
   .profileCard{
     width: 490px;
   }
+
+  .photo{
+    width: auto;
+    height: auto;
+  }
+
 
   .cardContainer{
     margin-left: 0;
