--- a/src/pages/public/Home/Home.scss
+++ b/src/pages/public/Home/Home.scss
@@ -5,7 +5,7 @@
   transform: translate(-50%, -50%);
   color: white;
   font-size: 80px;
-  text-shadow: 1px 1px black;
+  text-shadow: 1px 1px 6px black;
   font-weight: 400;
 }
 
@@ -15,9 +15,9 @@
   left: 40%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 40px;
-  text-shadow: 1px 1px black;
-  opacity: 0.85;
+  font-size: 36px;
+  text-shadow: 1px 1px 6px black;
+  opacity: 0.8;
   font-weight: 600;
 }
 
