--- a/src/components/public/NavBar/NavBar.scss
+++ b/src/components/public/NavBar/NavBar.scss
@@ -1,13 +1,59 @@
-.nav-item {
-    margin-right: 1%;
-    margin-left: 1%;
+.nav {
+    display: flex;
 }
 
+a:hover {
+    text-decoration: none;
+}
 
-.logo {
-    width: 10%;
+.navbar {
+    padding: 15px 60px;
+}
+
+#navbar_wrap {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex: 1 1 0%;
+}
+
+.nav-item a {
+    margin-right: 1%;
+    margin-left: 1%;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    padding: 20px;
+    color: rgb(26, 27, 31);
+    opacity: .6;
+    font-size: 14px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    opacity: 0.5;
+    transition: opacity .5s ease-out;
+    -moz-transition: opacity .5s ease-out;
+    -webkit-transition: opacity .5s ease-out;
+    -o-transition: opacity .5s ease-out;
+}
+
+.nav-item a:hover {
+    opacity: 1.0;
+}
+
+.logo_button {
+    position: relative;
     float: left;
-    display:inline-block;
+}
+
+#brand_icon {
+    font-size: 20px;
+    font-weight: 700;
+    color: #333333;
+    text-decoration: none;
+}
+
+#brand_icon:hover{
+    opacity: 0.7;
 }
 
 .link {
@@ -19,6 +65,24 @@
  width:100%;
 }
 
+#contact_button {
+    padding: 12px 25px;
+    background-color: black;
+    transition-property: background-color, opacity, color;
+    transition-duration: 400ms, 400ms, 400ms;
+    transition-timing-function: ease, ease, ease;
+    font-size: 12px;
+    color: white;
+    line-height: 20px;
+    letter-spacing: 2px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+#contact_button:hover {
+    opacity: 0.7;
+    
+}
 
 @media (min-width:885px){
     button{
