--- a/src/components/public/footer/footer.scss
+++ b/src/components/public/footer/footer.scss
@@ -1,122 +1,19 @@
-$left: left;
-
-.mainWrapper {
-  color: black;
-  // position: absolute;
-  // left: 0;
-  // right: 0;
-  // bottom:0;
-  // width: 100%;
-  // // height: 135px;
-  // margin-top: auto;
-  // // background-color: red;
-  // padding-top: 0 !important;
-  font-size: 90%;
-  position: absolute; 
-  bottom: 0; 
-  height:50px; 
-  // margin-top:2px;
-
+.footer_container {
+  display: flex;
+  // justify-content: space-between;
 }
-
-// ul {
-//   list-style: none;
-// }
-
-// .navLinks {
-//   text-align: right;
-// }
 .copyright {
-  text-align: $left;
-  margin-top: 20px;
+  font-size: 16px;
+  margin: 0;
+  padding: 10px;
 }
 
-.socialMedia * {
-  text-align: right;
+.left, .right {
+  flex: 1;
 }
 
-// Font Awesome Icons
-.fa {
-  padding: 11px;
-  font-size: 20px;
-  text-align: center;
-  text-decoration: none;
-  margin: 10px 5px;
-  border-radius: 50%;
-}
-
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
-}
-
-.fa-instagram {
-  background: #125688;
-  color: white;
-}
-
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-  width: 8%;
-}
-
-@media screen and (max-width: 1199px){
-  .fa-facebook{
-    width: 9%;
-  }
-}
-
-@media screen and (max-width: 991px){
-  .fa-facebook{
-    width: 12%;
-  }
-}
-
-@media screen and (max-width: 767px){
-  .fa-facebook{
-    width: 17%;
-  }
-}
-
-@media screen and (max-width: 502px){
-  .fa{
-    font-size:10px;
-    padding: 6px;
-
-  }
-
-  .fa-facebook{
-    width: 10%;
-  }
-
-  .copyright {
-    margin-top: 8px;
-  }
-
-  @media screen and (max-width: 411px){
-    .fa-facebook{
-      width: 11%;
-    }
-  }
-
-  @media screen and (max-width: 383px){
-    .fa-facebook{
-      width: 9%;
-    }
-  }
-
-  @media screen and (max-width: 375px){
-    .fa-facebook{
-      width: 13%;
-    }
-  }
-
-  @media screen and (max-width: 360px){
-    .mainWrapper{
-      font-size: 50%;
-    }
-  }
-
-  
+.footer_container ul {
+  list-style: none;
+  float: right;
+  padding-right: 50px;
 }
