--- a/src/pages/admin/Register/Register.scss
+++ b/src/pages/admin/Register/Register.scss
@@ -22,7 +22,6 @@ SILVER PINK: #C9ADA7
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #4a4e69;
 }
 
 .form-wrapper {
@@ -41,8 +40,6 @@ SILVER PINK: #C9ADA7
 .form-wrapper > h2 {
   display: flex;
   justify-content: center;
-  font-family: "Segoe UI", "Ubuntu", "Roboto", "Open Sans", "Helvetica Neue",
-    sans-serif;
   font-size: 2em;
   font-weight: lighter;
   margin-top: 0.25em;
@@ -88,11 +85,11 @@ input::placeholder {
   padding: 0.938em;
   border: none;
   border-radius: 4px;
-  background-color: #22223b;
+  background-color: black;
   color: #fefefe;
 }
 .registerSubmitBtn:hover {
-  background-color: #4a4e69;
+  background-color: #008b8b;
   color: #fefefe;
 }
 
