updated admin navbar and removed duplicate footer files

--- a/src/components/admin/Navbar/Navbar.scss
+++ b/src/components/admin/Navbar/Navbar.scss
@@ -2,4 +2,12 @@
   padding: 15px;
   position: relative;
   width: 100%;
+  background-color: black;
+}
+
+.nameLogo {
+  font-size: 20px;
+  font-weight: 700;
+  color: white;
+  text-decoration: none;
 }
