--- a/src/components/admin/Navbar/Navbar.scss
+++ b/src/components/admin/Navbar/Navbar.scss
@@ -2,4 +2,27 @@
   padding: 15px;
   position: relative;
   width: 100%;
+  background-color: black;
+  display: flex;
+}
+
+.nameLogo {
+  font-size: 20px;
+  font-weight: 700;
+  color: white;
+  text-decoration: none;
+}
+
+.logout-btn {
+  // float: right;
+  width: 150px;
+  cursor: pointer;
+  margin-right: 0.25em;
+  margin-top: 0.5em;
+  padding: 0.938em;
+  border: none;
+  border-radius: 4px;
+  background-color: black;
+  color: #fefefe;
+  letter-spacing: 3px;
 }
