--- a/src/components/admin/NewBlogPost/newBlogPost.scss
+++ b/src/components/admin/NewBlogPost/newBlogPost.scss
@@ -1,3 +1,22 @@
 h2{
     color: black
 }
+
+.blogSubmit {
+    width: 150px;
+    cursor: pointer;
+    margin-right: 0.25em;
+    margin-top: 0.5em;
+    padding: 0.938em;
+    border: none;
+    border-radius: 4px;
+    background-color: black;
+    color: #fefefe;
+    letter-spacing: 2px;
+    
+}
+  
+.blogSubmit:hover {
+background-color: #008b8b;
+color: #fefefe;
+}
