--- a/src/components/public/footer/footer.scss
+++ b/src/components/public/footer/footer.scss
@@ -1,6 +1,13 @@
+.footer_wrapper {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 75px;
+  background-color: white;
+}
+
 .footer_container {
   display: flex;
-  // justify-content: space-between;
 }
 .copyright {
   font-size: 16px;
