--- a/src/pages/public/Services/style.scss
+++ b/src/pages/public/Services/style.scss
@@ -6,6 +6,25 @@
 .servicesCards {
   margin-left: 15px;
   margin-right: 15px;
+  margin-bottom: 150px
+}
+
+.servicesCard {
+  margin-top: 50px;
+  margin-left: 25px;
+  width:350px;
+  height:300px;
+  img {
+    height:80px;
+    width: 80px;
+    margin-bottom: 10px  
+  };
+  a {
+    width: 200px;
+    height: 75pc;
+    margin-left: 50px;
+    line-height: 70px; 
+  }
 }
 
 p,
