--- a/src/components/admin/PreviousBlogPost/previousBlogPost.scss
+++ b/src/components/admin/PreviousBlogPost/previousBlogPost.scss
@@ -2,7 +2,6 @@ h2{
     color: black
 }
 
-
 table {
     width: 100%;
     table-layout: fixed;
@@ -18,4 +17,24 @@ table {
 
 .body-col{
     white-space: pre-wrap
+}
+
+.blogDelete {
+    font-size: 1em;
+    width: 80px;
+    cursor: pointer;
+    margin-right: 0.25em;
+    margin-top: 0.5em;
+    padding: 0.75em;
+    border: none;
+    border-radius: 4px;
+    background-color:  #008b8b;
+    color: #fefefe;
+    letter-spacing: 1px;
+    
+}
+  
+.blogDelete:hover {
+background-color: black;
+color: #fefefe;
 }
