--- a/src/pages/public/Services/Attorneys/style.scss
+++ b/src/pages/public/Services/Attorneys/style.scss
@@ -7,14 +7,13 @@
   width: 75%;
   margin-left: 12.5%;
   margin-bottom: 50px;
-  font-family: Montserrat, sans-serif;
   font-size: 16px;
   h1 {
     margin: 10px;
-    font-size: 36px
-  };
+    font-size: 36px;
+  }
   p {
-    margin: 5px
+    margin: 5px;
   }
 }
 
